[gd_scene load_steps=35 format=2]

[ext_resource path="res://assets/bgflatcolor.png" type="Texture" id=1]
[ext_resource path="res://scripts/gameField.gd" type="Script" id=2]
[ext_resource path="res://scripts/PlayerController.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/Pluton.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/globe_spritesheet.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/Ziemia.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/Merkury.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/Saturn.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/Jowisz.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/Uran.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/Wenus.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/Księżyc.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/Neptun.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/irohamaru-mikami-Medium.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://assets/sounds/Układ słoneczny.ogg" type="AudioStream" id=15]

[sub_resource type="CircleShape2D" id=5]
radius = 30.0

[sub_resource type="CircleShape2D" id=4]
radius = 14.3825

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 132, 132 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 132, 0, 132, 132 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 264, 0, 132, 132 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 396, 0, 132, 132 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 528, 0, 132, 132 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 660, 0, 132, 132 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 792, 0, 132, 132 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 924, 0, 132, 132 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1056, 0, 132, 132 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1188, 0, 132, 132 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1320, 0, 132, 132 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1452, 0, 132, 132 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1584, 0, 132, 132 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1716, 0, 132, 132 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1848, 0, 132, 132 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=22]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="bgflatcolor" type="Sprite" parent="."]
position = Vector2( 514, 306 )
scale = Vector2( 10.62, 6.24 )
texture = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 256.706, 304.272 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 5 )

[node name="Gravity" type="Area2D" parent="KinematicBody2D"]
position = Vector2( -2, 0 )
space_override = 1
gravity_point = true
gravity_vec = Vector2( 0, 0 )
gravity = 694.475

[node name="Gravity" type="CollisionShape2D" parent="KinematicBody2D/Gravity"]
scale = Vector2( 10, 10 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( -3.05176e-05, 0 )
scale = Vector2( 0.443021, 0.443021 )
frames = SubResource( 21 )
frame = 8
playing = true

[node name="Merkury" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 524.44, 318.707 )
stream = ExtResource( 7 )

[node name="Wenus" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 516.116, 323.464 )
stream = ExtResource( 11 )

[node name="Ziemia" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 517.305, 309.194 )
stream = ExtResource( 6 )

[node name="Mars" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 520.873, 310.383 )
stream = ExtResource( 6 )

[node name="Jowisz" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 505.413, 312.761 )
stream = ExtResource( 9 )

[node name="Saturn" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 520.873, 308.005 )
stream = ExtResource( 8 )

[node name="Uran" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 520.873, 329.41 )
stream = ExtResource( 10 )

[node name="Neptun" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 528.008, 315.14 )
stream = ExtResource( 13 )

[node name="Moon" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 519.683, 315.14 )
stream = ExtResource( 12 )

[node name="Pluton" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 536.332, 312.761 )
stream = ExtResource( 4 )

[node name="Earth2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 538.711, 313.951 )
stream = ExtResource( 6 )

[node name="SolarSystem" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 538.711, 313.951 )
stream = ExtResource( 15 )

[node name="Earth" type="RichTextLabel" parent="."]
visible = false
margin_left = 418.956
margin_top = 23.0169
margin_right = 829.956
margin_bottom = 223.017
custom_fonts/normal_font = SubResource( 22 )
text = "Earth
 地球"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moon2" type="RichTextLabel" parent="."]
visible = false
margin_left = 409.949
margin_top = 26.4983
margin_right = 737.949
margin_bottom = 232.498
custom_fonts/normal_font = SubResource( 22 )
text = "Moon
   月"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mercury" type="RichTextLabel" parent="."]
visible = false
margin_left = 388.051
margin_top = 12.0034
margin_right = 731.051
margin_bottom = 229.003
grow_vertical = 0
custom_fonts/normal_font = SubResource( 22 )
text = "Mercury
    水星"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Venus" type="RichTextLabel" parent="."]
visible = false
margin_left = 404.071
margin_top = 15.0203
margin_right = 703.071
margin_bottom = 221.02
custom_fonts/normal_font = SubResource( 22 )
text = "Venus
  金星"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jupiter" type="RichTextLabel" parent="."]
visible = false
margin_left = 374.475
margin_top = 23.4949
margin_right = 721.475
margin_bottom = 226.495
custom_fonts/normal_font = SubResource( 22 )
text = "Jupiter
   木星"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saturn2" type="RichTextLabel" parent="."]
visible = false
margin_left = 387.0
margin_top = 33.0
margin_right = 695.0
margin_bottom = 235.0
custom_fonts/normal_font = SubResource( 22 )
text = "Saturn
  土星"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uranus" type="RichTextLabel" parent="."]
visible = false
margin_left = 388.01
margin_top = 25.5288
margin_right = 732.01
margin_bottom = 249.529
custom_fonts/normal_font = SubResource( 22 )
text = "Uranus
 天王星"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Neptune" type="RichTextLabel" parent="."]
visible = false
margin_left = 388.488
margin_top = 19.5288
margin_right = 840.488
margin_bottom = 257.529
custom_fonts/normal_font = SubResource( 22 )
text = "Neptune
 海王星"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pluto" type="RichTextLabel" parent="."]
visible = false
margin_left = 413.533
margin_top = 17.9797
margin_right = 672.533
margin_bottom = 229.98
custom_fonts/normal_font = SubResource( 22 )
text = "Pluton
冥王星"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mars2" type="RichTextLabel" parent="."]
visible = false
margin_left = 413.533
margin_top = 17.9797
margin_right = 672.533
margin_bottom = 229.98
custom_fonts/normal_font = SubResource( 22 )
text = "Mars
 火星"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SolarSystem2" type="RichTextLabel" parent="."]
visible = false
margin_left = 303.404
margin_top = 16.8108
margin_right = 796.404
margin_bottom = 293.811
custom_fonts/normal_font = SubResource( 22 )
text = "Solar System
     太陽系"
__meta__ = {
"_edit_use_anchors_": false
}
